[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Player & Person/Cubo Neutral.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player.gd" type="Script" id=2]
[ext_resource path="res://Screens/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Sfondi/1.png" type="Texture" id=4]
[ext_resource path="res://Asset/Sfondi/2.png" type="Texture" id=5]
[ext_resource path="res://Asset/Sfondi/3.png" type="Texture" id=6]
[ext_resource path="res://Asset/Sfondi/4.png" type="Texture" id=7]
[ext_resource path="res://Asset/InteractableThings/Chiave test.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9, 31.9 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483667
collision_mask = 19
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 1 )

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -50 )
scale = Vector2( 0.3, 0.3 )
z_index = 5
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="HUD" parent="Canvas" instance=ExtResource( 3 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Back4" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="S4" type="Sprite" parent="ParallaxBackground/Back4"]
position = Vector2( 1280, 0 )
texture = ExtResource( 7 )

[node name="Back3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0 )
motion_offset = Vector2( 600, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="S3" type="Sprite" parent="ParallaxBackground/Back3"]
position = Vector2( 640, 0 )
texture = ExtResource( 6 )

[node name="Back2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.6, 0 )
motion_offset = Vector2( 100, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="S2" type="Sprite" parent="ParallaxBackground/Back2"]
position = Vector2( 640, 0 )
texture = ExtResource( 5 )

[node name="Back1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0 )
motion_offset = Vector2( -200, 0 )
motion_mirroring = Vector2( 1280, 0 )

[node name="S1" type="Sprite" parent="ParallaxBackground/Back1"]
position = Vector2( 640, 0 )
texture = ExtResource( 4 )
